--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link href="style/style.css" rel="stylesheet" type="text/css">
   <link href="style/animations.css" rel="stylesheet" type="text/css">
+
+  <script src="scripts/scripts.js" language="javascript" type="text/javascript"></script>
+
   <title>RAVII</title>
 </head>
 
@@ -30,7 +33,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#catalogo">Catalogo</a>
+                <a class="nav-link" " href="#catalogo">Catalogo</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
