--- a/html/catalogo.html
+++ b/html/catalogo.html
@@ -64,7 +64,7 @@
 
       <div class="container">
         <div class="row align-items-start row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-          <div class="col ">
+          <div class="col menu">
             <div class="dropdown">
               <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                 data-bs-toggle="dropdown" aria-expanded="false">
