--- a/index.html
+++ b/index.html
@@ -2,68 +2,50 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link href="style/style.css" rel="stylesheet" type="text/css">
-  <link href="style/animations.css" rel="stylesheet" type="text/css">
-  <title>RAVII</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="style/style.css" rel="stylesheet" type="text/css">
+    <link href="style/animations.css" rel="stylesheet" type="text/css">
+    <title>RAVII</title>
 </head>
 
 <body>
-
-  <section class=" padre fondo">
-    <section class="hijo">
-      <div>
-        <h1 class="animation ">R</h1>
+    <section class=" padre fondo">
+        <section class="hijo">
+            <div>
+                <h1 class="animation ">R</h1>
+        </section>
+        <section class="hijo">
+            <h1 class="animation ">A</h1>
+        </section>
+        <section class="hijo">
+            <h1 class="animation ">V</h1>
+        </section>
+        <section class="hijo">
+            <h1 class="animation ">I</h1>
+        </section>
+        <section class="hijo">
+            <h1 class="animation ">I</h1>
+        </section>
+        </div>
     </section>
-    <section class="hijo">
-      <h1 class="animation ">A</h1>
-    </section>
-    <section class="hijo">
-      <h1 class="animation ">V</h1>
-    </section>
-    <section class="hijo">
-      <h1 class="animation ">I</h1>
-    </section>
-    <section class="hijo">
-      <h1 class="animation ">I</h1>
-    </section>
-    </div>
-  </section>
 
 
+    <script>
+        function redireccionarPagina() {
+            window.location = "html/catalogo.html";
+        }
+        setTimeout("redireccionarPagina()", 2000);
+    </script>
 
-
-<script>
-
-function redireccionarPagina() {
-  window.location = "html/catalogo.html";
-}
-setTimeout("redireccionarPagina()", 2000);
-
-</script>
-
-
-
-
-
-
-
-
-  <!-- Optional JavaScript; choose one of the two! -->
-
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
-
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
+    <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
