--- a/html/catalogo.html
+++ b/html/catalogo.html
@@ -13,7 +13,7 @@
     <title>RAVII</title>
 </head>
 
-<body>
+<body style="background: rgb(237, 237, 237);">
     <div id="up"><a>a</a></div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
@@ -50,10 +50,10 @@
 
 
     <section class="catalogo " id="catalogo">
-        <div class="album py-5 bg-light">
+        <div class="album py-5 ">
             <div class="padres">
                 <div>
-                    <h2 class="hijo">Catalogo</h1>
+                    <h2 class="hijo">Catalogo</h2>
                 </div>
             </div>
             <div class="container">
@@ -306,6 +306,57 @@
                 <button type="button" class="btn btn-primary" onclick="reload()" href="#catalogo">Library</button>
             </div>
     </section>
+
+
+    <footer class="container py-5 footer">
+        <div class="row">
+            <div class="col-12 col-md">
+                <a class=""><img src="https://avatars.githubusercontent.com/u/48779532?s=460&u=8b6a6beefbc3f42d83ade927e7307a8c182dd5bf&v=4" style="border-radius: 50%; width: 40%; height: 30%;" alt="Avatar">
+                </a>
+
+                <small class="d-block mb-3 text-muted">&copy; Abraham Lugo Ramirez 2021</small>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Software Developers</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="link-secondary" href="#">Cool stuff</a></li>
+                    <li><a class="link-secondary" href="#">Random feature</a></li>
+                    <li><a class="link-secondary" href="#">Team feature</a></li>
+                    <li><a class="link-secondary" href="#">Stuff for developers</a></li>
+                    <li><a class="link-secondary" href="#">Another one</a></li>
+                    <li><a class="link-secondary" href="#">Last time</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Resources</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="link-secondary" href="#">Resource name</a></li>
+                    <li><a class="link-secondary" href="#">Resource</a></li>
+                    <li><a class="link-secondary" href="#">Another resource</a></li>
+                    <li><a class="link-secondary" href="#">Final resource</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Resources</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="link-secondary" href="#">Business</a></li>
+                    <li><a class="link-secondary" href="#">Education</a></li>
+                    <li><a class="link-secondary" href="#">Government</a></li>
+                    <li><a class="link-secondary" href="#">Gaming</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>About</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="link-secondary" href="#">Team</a></li>
+                    <li><a class="link-secondary" href="#">Locations</a></li>
+                    <li><a class="link-secondary" href="#">Privacy</a></li>
+                    <li><a class="link-secondary" href="#">Terms</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
 
     <script>
         window.location = "#up";
