--- a/html/catalogo.html
+++ b/html/catalogo.html
@@ -311,7 +311,7 @@
     <footer class="container py-5 footer">
         <div class="row">
             <div class="col-12 col-md">
-                <a class=""><img src="https://avatars.githubusercontent.com/u/48779532?s=460&u=8b6a6beefbc3f42d83ade927e7307a8c182dd5bf&v=4" style="border-radius: 50%; width: 40%; height: 30%;" alt="Avatar">
+                <a class=""><img src="https://avatars.githubusercontent.com/u/48779532?s=460&u=8b6a6beefbc3f42d83ade927e7307a8c182dd5bf&v=4" style="border-radius: 50%; width: 70px; height: 60px;" alt="Avatar">
                 </a>
 
                 <small class="d-block mb-3 text-muted">&copy; Abraham Lugo Ramirez 2021</small>
